--- a/tasks/VT/000/VT-002.md
+++ b/tasks/VT/000/VT-002.md
@@ -10,5 +10,6 @@ priority: medium
 
 - In rettangoli-ui we run `bun run vt:generate` which generates screenshots
 - However, the screenshots generated for dialog, is sometimes inconsistent and the generated image is not 100% the same. This is not idea.
+  - this happens because for the `rtgl-dialog`, there is a small css animation to show the dialog
 - We have tried to add delay like 500ms before doing the screenshot, but it still does not generate consistent screenshots.
 
