feat(vt): add skip option for sections and items

--- a/tasks/VT/000/VT-004.md
+++ b/tasks/VT/000/VT-004.md
@@ -1,6 +1,6 @@
 ---
 title: vt ignore test files
-status: todo
+status: done
 priority: high
 assignee: nghia
 ---
@@ -9,5 +9,56 @@ assignee: nghia
 
 we want to not comment the video tests in route-graphics
 we just want to specify somewhere in config that vt report should skip them for reporting and screenshotting.
+
+# Implementation
+
+Added `skip: true` option to config sections and items. When a section or item is marked with `skip: true`:
+
+1. **Screenshot generation is skipped** - Files in skipped sections won't have screenshots taken
+2. **Report excludes skipped items** - Skipped screenshots won't be compared or show up as mismatches
+3. **HTML files and sidebar still include skipped sections** - The overview pages and sidebar will still show all items, only screenshot generation and report comparison are skipped
+
+## Usage
+
+### Skip an entire group section:
+```yaml
+vt:
+  sections:
+    - title: "Primitives"
+      type: "groupLabel"
+      skip: true  # Skip all items in this group
+      items:
+        - title: "Button"
+          files: "primitives/button"
+```
+
+### Skip individual items:
+```yaml
+vt:
+  sections:
+    - title: "Components"
+      type: "groupLabel"
+      items:
+        - title: "Select"
+          files: "components/select"
+        - title: "Waveform"
+          files: "components/waveform"
+          skip: true  # Skip only this item
+```
+
+### Skip flat sections:
+```yaml
+vt:
+  sections:
+    - title: "Todos"
+      files: "pages/todos"
+      skip: true  # Skip this section
+```
+
+## Files Modified
+
+- `packages/rettangoli-vt/src/common.js` - Added `getSkippedFilePaths()` and `isPathSkipped()` helper functions, updated `generateOverview()` to filter skipped sections/items
+- `packages/rettangoli-vt/src/cli/generate.js` - Filter out skipped files before taking screenshots
+- `packages/rettangoli-vt/src/cli/report.js` - Filter out skipped files from report comparison
 
 
