refactor: rename skip to skipScreenshot, revert report.js changes

--- a/tasks/VT/000/VT-004.md
+++ b/tasks/VT/000/VT-004.md
@@ -12,11 +12,11 @@ we just want to specify somewhere in config that vt report should skip them for 
 
 # Implementation
 
-Added `skip: true` option to config sections and items. When a section or item is marked with `skip: true`:
+Added `skipScreenshot: true` option to config sections and items. When a section or item is marked with `skipScreenshot: true`:
 
 1. **Screenshot generation is skipped** - Files in skipped sections won't have screenshots taken
-2. **Report excludes skipped items** - Skipped screenshots won't be compared or show up as mismatches
-3. **HTML files and sidebar still include skipped sections** - The overview pages and sidebar will still show all items, only screenshot generation and report comparison are skipped
+2. **Report automatically excludes skipped items** - Since no screenshots are generated, they won't appear in report comparisons
+3. **HTML files and sidebar still include all sections** - The overview pages and sidebar will still show all items
 
 ## Usage
 
@@ -26,7 +26,7 @@ vt:
   sections:
     - title: "Primitives"
       type: "groupLabel"
-      skip: true  # Skip all items in this group
+      skipScreenshot: true  # Skip all items in this group
       items:
         - title: "Button"
           files: "primitives/button"
@@ -43,7 +43,7 @@ vt:
           files: "components/select"
         - title: "Waveform"
           files: "components/waveform"
-          skip: true  # Skip only this item
+          skipScreenshot: true  # Skip only this item
 ```
 
 ### Skip flat sections:
@@ -52,13 +52,10 @@ vt:
   sections:
     - title: "Todos"
       files: "pages/todos"
-      skip: true  # Skip this section
+      skipScreenshot: true  # Skip this section
 ```
 
 ## Files Modified
 
-- `packages/rettangoli-vt/src/common.js` - Added `getSkippedFilePaths()` and `isPathSkipped()` helper functions, updated `generateOverview()` to filter skipped sections/items
+- `packages/rettangoli-vt/src/common.js` - Added `getSkippedFilePaths()` and `isPathSkipped()` helper functions
 - `packages/rettangoli-vt/src/cli/generate.js` - Filter out skipped files before taking screenshots
-- `packages/rettangoli-vt/src/cli/report.js` - Filter out skipped files from report comparison
-
-
