feat: add skipScreenshot support in frontmatter

--- a/tasks/VT/000/VT-004.md
+++ b/tasks/VT/000/VT-004.md
@@ -55,6 +55,15 @@ vt:
       skipScreenshot: true  # Skip this section
 ```
 
+### Skip individual spec files (frontmatter):
+```yaml
+---
+title: "My Test"
+skipScreenshot: true
+---
+<rtgl-view>...</rtgl-view>
+```
+
 ## Files Modified
 
 - `packages/rettangoli-vt/src/common.js` - Added `getSkippedFilePaths()` and `isPathSkipped()` helper functions
