refactor: simplify skipScreenshot to frontmatter only

--- a/tasks/VT/000/VT-004.md
+++ b/tasks/VT/000/VT-004.md
@@ -12,48 +12,13 @@ we just want to specify somewhere in config that vt report should skip them for 
 
 # Implementation
 
-Added `skipScreenshot: true` option to config sections and items. When a section or item is marked with `skipScreenshot: true`:
+Added `skipScreenshot: true` option in spec file frontmatter. When a file has `skipScreenshot: true` in its frontmatter:
 
-1. **Screenshot generation is skipped** - Files in skipped sections won't have screenshots taken
+1. **Screenshot generation is skipped** - The file won't have screenshots taken
 2. **Report automatically excludes skipped items** - Since no screenshots are generated, they won't appear in report comparisons
-3. **HTML files and sidebar still include all sections** - The overview pages and sidebar will still show all items
+3. **HTML files and sidebar still include all files** - The overview pages and sidebar will still show all items
 
 ## Usage
-
-### Skip an entire group section:
-```yaml
-vt:
-  sections:
-    - title: "Primitives"
-      type: "groupLabel"
-      skipScreenshot: true  # Skip all items in this group
-      items:
-        - title: "Button"
-          files: "primitives/button"
-```
-
-### Skip individual items:
-```yaml
-vt:
-  sections:
-    - title: "Components"
-      type: "groupLabel"
-      items:
-        - title: "Select"
-          files: "components/select"
-        - title: "Waveform"
-          files: "components/waveform"
-          skipScreenshot: true  # Skip only this item
-```
-
-### Skip flat sections:
-```yaml
-vt:
-  sections:
-    - title: "Todos"
-      files: "pages/todos"
-      skipScreenshot: true  # Skip this section
-```
 
 ### Skip individual spec files (frontmatter):
 ```yaml
@@ -66,5 +31,4 @@ skipScreenshot: true
 
 ## Files Modified
 
-- `packages/rettangoli-vt/src/common.js` - Added `getSkippedFilePaths()` and `isPathSkipped()` helper functions
-- `packages/rettangoli-vt/src/cli/generate.js` - Filter out skipped files before taking screenshots
+- `packages/rettangoli-vt/src/cli/generate.js` - Filter out files with `skipScreenshot: true` in frontmatter before taking screenshots
